--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-html5-camera-photo": "^1.5.4",
     "react-scripts": "3.4.3"
   },
   "scripts": {
